--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./bundle.js"></script>
+    <link rel="stylesheet" href="application.css" />
     <title>Minesweeper</title>
-</head>
-<body>
-    <div id='root'>Oh no, you broke React</div>
-</body>
+  </head>
+  <body>
+    <div id="root">Oh no, you broke React</div>
+  </body>
 </html>
