--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -7,6 +7,24 @@
     <script src="./bundle.js"></script>
     <link rel="stylesheet" href="application.css" />
     <title>Minesweeper</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(function () {
+        $("body").on("click", ".js-modal-open", function (event) {
+          event.preventDefault();
+          $(".modal").addClass("is-open");
+        });
+
+        $("body").on("click", ".js-modal-close", function (event) {
+          event.preventDefault();
+          $(".modal").removeClass("is-open");
+        });
+      });
+    </script>
   </head>
   <body>
     <div id="root">Oh no, you broke React</div>
